--- a/src/lml/lib/html/host_overview.html
+++ b/src/lml/lib/html/host_overview.html
@@ -1,5 +1,5 @@
 
-<div class="main_content" id="host_overview" data-ng-controller="HostOverviewController">
+<div class="main_content" id="host_overview" data-ng-controller="HostOverviewController" ng-disabled="isServerRequestRunning">
   <table id="hostlist_table" border="1" cellpadding="3" cellspacing="0">
     <thead id="hostlist">
      <tr valign ="top">
