--- a/src/lml/lib/html/vm_overview.html
+++ b/src/lml/lib/html/vm_overview.html
@@ -4,7 +4,7 @@
         <h3>Problems while performing action</h3>
         <p>The following error occured: <b id="vm_action_error_message"></b></p>
     </div>
-    <form id="vm_action_form">
+    <form id="vm_action_form" ng-disabled="isServerRequestRunning">
      <table id="vmlist_table" cellpadding="3" cellspacing="0">
 
         <!-- TODO VM_OVERVIEW-->
