--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -20,7 +20,7 @@
 
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
-<body data-ng-app="lml-app">
+<body data-ng-app="lml-app" data-ng-controller="MainController">
     <div id="logoframe">
         <a href="#"><img src="lib/images/LabManagerLightlogo-small.png"/></a><br/>
     </div>
@@ -33,9 +33,12 @@
         <li ng-class="{active: globals.activeTab == 'configuration'}"><a href="#/configuration">Configuration</a></li>
     </ul>
 
+    <div id='waiting' data-ng-show="isServerRequestRunning"><img src='lib/images/wait.gif'/></div>
+
     <div tab-pane="tab-content">
       <div data-ng-view></div>
     </div>
+
     <div id="footer">
         <a href="https://github.com/ImmobilienScout24/lab-manager-light" target="_blank">Lab Manager Light</a> is licensed under the <a href="http://www.gnu.org/licenses/gpl.html" target="_blank">GNU General Public License</a>.
         Version $LML_VERSION
@@ -46,6 +49,7 @@
     <script src="lib/js/lml/HostOverviewController.js" type="text/javascript"></script>
     <script src="lib/js/lml/ConfigurationController.js" type="text/javascript"></script>
     <script src="lib/js/lml/ToolsController.js" type="text/javascript"></script>
+    <script src="lib/js/lml/MainController.js" type="text/javascript"></script>
     <script src="lib/js/lml/AjaxCallService.js" type="text/javascript"></script>
     <!-- The angular module have to loaded last. -->
     <script src="lib/js/lml/LabManagerLight.js" type="text/javascript"></script>
