--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="lib/css/jquery.dataTables.css" />
    <link rel="stylesheet" type="text/css" href="lib/css/TableTools.css" />
    <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css" />
-   <link rel="stylesheet" type="text/css" href="lib/css/lml.css" />
+   <link rel="stylesheet" type="text/css" href="lib/css/lml_v2.css" />
    <link rel="stylesheet" type="text/css" href="lib/css/jquery-ui-1.10.3.custom.css" />
    <link rel="stylesheet" type="text/css" href="lib/css/lml-print.css" media="print"/>
    <script src="lib/js/angular.min.js" type="text/javascript"></script>
