DEVEN-199 fixed bug in new webapp with unsubmitted host for new vm form

--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>v2 $vsphere_server Lab Manager Light</title>
+   <title>Lab Manager Light</title>
    <link rel="shortcut icon" type="image/png" href="lib/images/favicon.png"/>
    <link rel="stylesheet" type="text/css" href="lib/css/jquery.cluetip.css" />
    <link rel="stylesheet" type="text/css" href="lib/css/jquery.dataTables.css" />
