DEVEN-199 fixed broken link in new webapp (vm overview)

--- a/src/lml/lib/html/host_overview.html
+++ b/src/lml/lib/html/host_overview.html
@@ -3,7 +3,7 @@
   <table id="hostlist_table" border="1" cellpadding="3" cellspacing="0">
     <thead id="hostlist">
      <tr valign ="top">
-       <th title="Click to sort">Name</th>,
+       <th title="Click to sort">Name</th>
        <th title ="Click to sort">CPU (GHz)</th>
        <th title ="Click to sort">MEM (GB)</th>
        <th title ="Click to sort">Fairness</th>
