DEVEN-199 LML version is shown in web app (index.html)

--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -34,13 +34,13 @@
 
     <div id='waiting' data-ng-show="isServerRequestRunning"><img src='images/wait.gif'/></div>
 
-    <div tab-pane="tab-content">
+    <div class="tab-content" tab-pane="tab-content">
       <div data-ng-view></div>
     </div>
 
     <div id="footer">
         <a href="https://github.com/ImmobilienScout24/lab-manager-light" target="_blank">Lab Manager Light</a> is licensed under the <a href="http://www.gnu.org/licenses/gpl.html" target="_blank">GNU General Public License</a>.
-        Version $LML_VERSION
+        Version {{version}}
     </div>
 
     <script src="js/lml/VmOverviewController.js" type="text/javascript"></script>
