--- a/src/lml/html/host_overview.html
+++ b/src/lml/html/host_overview.html
@@ -4,6 +4,7 @@
     <thead id="hostlist">
      <tr valign ="top">
        <th title="Click to sort">Name</th>
+       <th title="Click to sort">State</th>
        <th title ="Click to sort">CPU (GHz)</th>
        <th title ="Click to sort">MEM (GB)</th>
        <th title ="Click to sort">Fairness</th>
@@ -14,23 +15,25 @@
      </tr>
    </thead>
    <tbody>
-    <tr data-ng-repeat="host in hosts" id="{{host.id}}" class="{{host.overallStatus}}">
-      <td title="{{host.id}}">{{host.name}}</td>
-      <td title="{{host.id}}">{{host.cpuUsage}}</td>
-      <td title="{{host.id}}">{{host.memoryUsage}}</td>
-      <td title="{{host.id}}">{{host.fairness}}</td>
-      <td title="{{host.id}}">
+    <tr data-ng-repeat="host in hosts" id="{{host.id}}">
+      <td title="{{host.id}}
+      {{host.path}}">{{host.name}}</td>
+      <td class="{{host.overallStatus}}"><span ng-class="{inactive: host.active == 0}">OK</span></td>
+      <td>{{host.cpuUsage}}</td>
+      <td>{{host.memoryUsage}}</td>
+      <td>{{host.fairness}}</td>
+      <td>
         <div style="font-size: 60%"  data-ng-repeat="network in host.networks">
           {{network}}
         </div>
       </td>
-      <td title="{{host.id}}">
+      <td>
         <div style="font-size: 60%"  data-ng-repeat="datastore in host.datastores">
           {{datastore}}
         </div>
       </td>
-      <td title="{{host.id}}">{{host.hardware}}</td>
-      <td title="{{host.id}}">{{host.product}}</td>
+      <td>{{host.hardware}}</td>
+      <td>{{host.product}}</td>
     </tr>
 
   </tbody>
