--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -43,7 +43,7 @@
         <a href="https://github.com/ImmobilienScout24/lab-manager-light" target="_blank">Lab Manager Light</a> is licensed under the <a href="http://www.gnu.org/licenses/gpl.html" target="_blank">GNU General Public License</a>.
         Version {{version}}
     </div>
-    <div class="right"><a href="api/index.html">REST API</a> | <a href="index.pl">Old GUI</a></div>
+    <div class="right"><a href="api/index.html">REST API</a> | <a href="old-gui.pl">Old GUI</a></div>
 
     <script src="js/lml/VmOverviewController.js" type="text/javascript"></script>
     <script src="js/lml/NewVmController.js" type="text/javascript"></script>
