DEVEN-199 Introduce concept of VM folder paths to LML * speed up API retrieval by doing folder paths ourselves * show select list of existing folder paths in new vm UI * start to refactor LML::Lab tests into subfolder

--- a/src/lml/html/new_vm.html
+++ b/src/lml/html/new_vm.html
@@ -43,7 +43,11 @@
         </tr>
         <tr>
             <td><p>Target folder</p></td>
-            <td><input type="text" name="folder"/></td>
+            <td>
+                <select ng-model="folder" ng-options="p.value as p.label for p in paths">
+                </select>
+                <input type="hidden" name="folder" value="{{folder}}"/>
+            </td>
         </tr>
         <tr>
             <td colspan="2">
