ITPRO-86 Prefill expiration date to now plus 1 year.

--- a/src/lml/html/new_vm.html
+++ b/src/lml/html/new_vm.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td><p>Expiration date</p></td>
-            <td><input type="text" name="expiration"/></td>
+            <td><input type="text" name="expiration" ng-model="expiration" value="{{expiration}}"/></td>
         </tr>
         <tr>
             <td><p>Target folder</p></td>
