DEVEN-959 Show VM expiry as error in GUI, search for "expir" to select problematic VMs. Helps #26, still need to prevent creation of VMs with invalid expiration dates.

--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -35,7 +35,7 @@
         </td>
         <td>{{vm.vm_path}}</td>
         <td>{{vm.contact_id}}</td>
-        <td>{{vm.expires}}</td>
+        <td>{{vm.expires}}<img class="stop_icon" data-ng-show="vm.date_bad" src="images/stop.png"/></td>
         <td>{{vm.esxhost}}</td>
       </tr>
     </tbody>
