--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -1,4 +1,5 @@
-<div class="main_content" id="vm_overview" data-ng-controller="VmOverviewController">
+<div class="main_content" id="vm_overview" data-ng-controller="VmOverviewController"
+     xmlns="http://www.w3.org/1999/html">
   <div id="dialog"></div>
   <div class="error message" id="vm_action_error">
     <h3>Problems while performing action</h3>
@@ -11,16 +12,19 @@
       <thead id="vmlist">
        <tr valign ="top">
 
-         <th title="Click to sort">Hostname</th>
-         <th title ="Click to sort">VM Path</th>
-         <th title ="Click to sort">Contact User ID</th>
-         <th title ="Click to sort">Expires</th>
-         <th title ="Click to sort">ESX Host</th>
+         <th title="Click to sort" data-ng-click="changeSorting('fullname')">Hostname</th>
+         <th title ="Click to sort" data-ng-click="changeSorting('vm_path')">VM Path</th>
+         <th title ="Click to sort" data-ng-click="changeSorting('contact_id')">Contact User ID</th>
+         <th title ="Click to sort" data-ng-click="changeSorting('vm_path')">Expires</th>
+         <th title ="Click to sort" data-ng-click="changeSorting('esxhost')">ESX Host</th>
 
        </tr>
      </thead>
+        Suche: <input type="text" data-ng-model="table_filter"/>
+        Ergebnis: <span data-ng-bind="filteredData.length"></span>
+        von <span data-ng-bind="vms.length"/></span>
      <tbody>
-      <tr id="{{vm.uuid}}" data-ng-repeat="vm in vms">
+      <tr id="{{vm.uuid}}" data-ng-repeat="vm in filteredData | orderBy:sort.column:sort.descending">
         <td>
           <input type="checkbox" name="hosts" label="" value="{{vm.uuid}}">
           <a href="vmdata.pl/{{vm.uuid}}" title="Details" onclick ="return false;" rel="vmdata.pl/{{vm.uuid}}" class="tip vmhostname">
