--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -45,8 +45,8 @@
     </tbody>
   </table>
   <div class="vm_action_panel">
-    <a ng-click="detonate($event)" class="button" title="Reinstall selected machines"><img src="images/bomb.png" class="button_image"/>&nbsp;Detonate</a>
-    <a id="destroy_button" class="button confirm" href="#" title="Delete the selected machine(s) physically" rel="Really delete the selected machines physically?"><img src="images/delete.png" class="button_image"/>&nbsp;Delete</a>
+    <a ng-click="detonate()" ng-disabled="{{detonateDisabled}}" class="button" title="Reinstall selected machines"><img src="images/bomb.png" class="button_image"/>&nbsp;Detonate</a>
+    <a id="destroy_button"   ng-disabled="{{destroyDisabled}}"  class="button confirm" title="Delete the selected machine(s) physically" rel="Really delete the selected machines physically?"><img src="images/delete.png" class="button_image"/>&nbsp;Delete</a>
   </div>
 </form>
 </div>
