--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -6,7 +6,7 @@
     <p>The following error occured: <b id="vm_action_error_message"></b></p>
   </div>
   <form id="vm_action_form" ng-disabled="isServerRequestRunning">
-    <table id="vmlist_table" cellpadding="3" cellspacing="0">
+    <table class="table table-striped" id="vmlist_table" cellpadding="3" cellspacing="0">
 
       <!-- TODO VM_OVERVIEW-->
       <thead id="vmlist">
