Throttle search execution

--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -21,7 +21,7 @@
 
        </tr>
      </thead>
-        Suche: <input type="text" data-ng-model="table_filter"/>
+        Suche: <input type="text" data-ng-model="searchTerm"/>
         Ergebnis: <span data-ng-bind="filteredData.length"></span>
         von <span data-ng-bind="vms.length"/></span>
      <tbody>
