--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -11,6 +11,8 @@
    <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.10.3.custom.css" />
    <link rel="stylesheet" type="text/css" href="css/lml-print.css" media="print"/>
    <script src="js/angular.min.js" type="text/javascript"></script>
+   <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
+   <script src="js/ng-csv.min.js" type="text/javascript"></script>
    <script src="js/ui-bootstrap-tpls-0.5.0.min.js" type="text/javascript"></script>
    <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
    <script src="js/jquery.cluetip.min.js" type="text/javascript"></script>
