--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -6,6 +6,23 @@
   </div>
 
   <form id="vm_action_form" ng-disabled="isServerRequestRunning">
+    <div style="clear:both">
+      <div class="pull-left">
+          <div class="button" type="button" data-ng-csv="getCsvValues()" data-csv-header="['date_bad','vm_path','extra_link_enabled','extra_link_text','uuid','fullname','screenshot_enabled','contact_id','id','screenshot_url','extra_link_url','esxhost','expires']" filename="vm_overview.csv">CSV</div>
+          <div class="button" type="button" data-ng-click="print()">Print</div>
+      </div>
+
+      <div class="search pull-right">
+          <div>
+              <span class="indent">Suche:</span><input type="text" data-ng-model="searchTerm"/>
+          </div>
+          <div class="indent">
+              Ergebnis: <span data-ng-bind="filteredData.length"></span>
+              von <span data-ng-bind="vms.length"/></span>
+          </div>
+      </div>
+    </div>
+
     <table class="table table-striped" id="vmlist_table" cellpadding="3" cellspacing="0">
 
       <thead id="vmlist">
@@ -20,20 +37,6 @@
 
        </tr>
      </thead>
-        <div class="pull-left">
-            <button class="button" type="button" data-ng-csv="getCsvValues()" data-csv-header="['date_bad','vm_path','extra_link_enabled','extra_link_text','uuid','fullname','screenshot_enabled','contact_id','id','screenshot_url','extra_link_url','esxhost','expires']" filename="vm_overview.csv">CSV</button>
-            <button class="button" type="button" data-ng-click="print()">Print</button>
-        </div>
-
-       <div class="search pull-right">
-           <div>
-           <span class="indent">Suche:</span><input type="text" data-ng-model="searchTerm"/>
-         </div>
-         <div class="indent">
-           Ergebnis: <span data-ng-bind="filteredData.length"></span>
-           von <span data-ng-bind="vms.length"/></span>
-         </div>
-       </div>
      <tbody>
       <tr id="{{vm.uuid}}" data-ng-repeat="vm in filteredData | orderBy:sort.column:sort.descending">
         <td>
