--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -6,14 +6,14 @@
    <link rel="stylesheet" type="text/css" href="css/jquery.cluetip.css" />
    <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" />
    <link rel="stylesheet" type="text/css" href="css/TableTools.css" />
-   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+   <link rel="stylesheet" type="text/css" href="css/bootstrap-2.3.2.min.css" />
    <link rel="stylesheet" type="text/css" href="css/lml.css" />
    <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.10.3.custom.css" />
    <link rel="stylesheet" type="text/css" href="css/lml-print.css" media="print"/>
    <script src="js/angular.min.js" type="text/javascript"></script>
    <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
    <script src="js/ng-csv.min.js" type="text/javascript"></script>
-   <script src="js/ui-bootstrap-tpls-0.5.0.min.js" type="text/javascript"></script>
+   <script src="js/ui-bootstrap-tpls-0.9.0.js" type="text/javascript"></script>
    <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
    <script src="js/jquery.cluetip.min.js" type="text/javascript"></script>
    <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
@@ -54,6 +54,7 @@
     <script src="js/lml/ToolsController.js" type="text/javascript"></script>
     <script src="js/lml/MainController.js" type="text/javascript"></script>
     <script src="js/lml/AjaxCallService.js" type="text/javascript"></script>
+    <script src="js/lml/TooltipDirective.js" type="text/javascript"></script>
     <!-- The angular module have to loaded last. -->
     <script src="js/lml/LabManagerLight.js" type="text/javascript"></script>
 
